# audios-to-dataset

./: .dockerignore  .gitignore  .goreleaser.yaml  Cargo.toml  README.md  justfile  metadata-file.csv
.cargo/: config.toml
.github/workflows/: build-and-release.yml  build.yml  test-linux-x86_64-unknown-linux-gnu.yml  test-linux-x86_64-unknown-linux-musl.yml  test-win-x86_64.yml  win-x86_64.yml
scripts/: csv_path_rewriter.py  test_csv_path_rewriter.py
src/: main.rs
tests/: end_to_end.rs
