[package]
name = "audios-to-dataset"
version = "0.3.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
duckdb = { version = "1.4.2", features = ["bundled"] }
recv-dir = "0.3.1"
tree_magic_mini = { version = "3.2.2", features = ["with-gpl-data"] }

polars = { version = "0.52.0", features = ["parquet", "dtype-struct"] }

serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
anyhow = "1.0"

rayon = { version = "1.11.0" }
hound = "3.5.1"
polars-io = "0.52.0"
csv = "1.4.0"

[dev-dependencies]
assert_cmd = "2.1"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false
